--- a/Web/index.html
+++ b/Web/index.html
@@ -26,10 +26,10 @@ Craig Lawlor, Craig Doyle, Cillian o Criothaile (c00139896), Helmuts Dunavskis (
 			<div  class="dropLink">
 				<a href="javascript: toggle1()" id="test" class="dropbut">Parent 1</a>
 				<div id="link1" class="dropdownSide">
-					<a href="../OpenDeposit.html.php" target="contentframe" id="puece" onclick="testfunction(this.id)" class="linkbut"  > Report</a>
-					<a href="" target="contentframe" class="linkbut" > Add Record</a>
-					<a href="" target="contentframe" class="linkbut" >Child 3</a>
-					<a href="" target="contentframe" class="linkbut" >Amend/View</a>
+					<a href="../OpenDeposit.html.php" target="contentframe" id="puece" onclick="testfunction(this.id)" class="linkbut"  > Open Deposit</a>
+					<a href="../CloseDeposit.html.php" target="contentframe" class="linkbut" > Close Deposit Account</a>
+					<a href="../ViewDeposit.html.php" target="contentframe" class="linkbut" >View Deposit</a>
+					<a href="../DepositReport.html.php" target="contentframe" class="linkbut" >Report</a>
 				</div>
 				<a href="javascript: toggle2()" class="dropbut">Parent 2</a>
 				<div id="link2" class="dropdownSide">
