--- a/Web/Welcome.html
+++ b/Web/Welcome.html
@@ -24,6 +24,9 @@
 
 </head>
 <body>
+<!--
+allow user to change password or to log out -->
+
 <form action="login.php" method="post">
     <input type="submit" name="changepass" value="Change Password">
     <input type="submit" name="logout" value="logo2ut">
